--- a/.github/workflows/build-source-image.yaml
+++ b/.github/workflows/build-source-image.yaml
@@ -228,9 +228,8 @@ on:
         - minor
         - patch
 jobs:
-  print-tag:
+  build-and-push:
     runs-on: ubuntu-latest
-    if:  ${{ inputs.connector }} 
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
@@ -246,5 +245,22 @@ jobs:
       - name: Print Tag
         id: printtag
         run: echo  The tags are ${{ github.event.inputs.basetag || steps.previoustag.outputs.tag }} 
+      
+      - name: Get Next Version
+        id: major
+        uses: "WyriHaximus/github-action-next-semvers@v1"
+        with:
+          version: ${{ github.event.inputs.basetag || steps.previoustag.outputs.tag }}
+      
+      - name: Print Next Version according to change_type
+        id: printnextversion
+        run: |
+          if [ {{ github.event.inputs.change_type }} -eq "minor" ] then 
+            nextversion={{ steps.previoustag.outputs.v_minor }}  
+          else 
+            nextversion={{ steps.previoustag.outputs.v_patch }}  
+          fi;
+          echo $nextversion
+
 
 
