--- a/.github/workflows/build-source-image.yaml
+++ b/.github/workflows/build-source-image.yaml
@@ -266,7 +266,7 @@ jobs:
           else
             nextversion=${{ steps.nextversion.outputs.v_patch }}  
           fi;
-          source_branch_name=${GITHUB_REF##*/}
+          source_branch_name="${GITHUB_REF##*/}"
 
           # for dev branches, prefix "rc-"
           if [ $source_branch_name = "main" ]; then 
