--- a/.github/workflows/build-source-image.yaml
+++ b/.github/workflows/build-source-image.yaml
@@ -267,10 +267,11 @@ jobs:
             nextversion=${{ steps.nextversion.outputs.v_patch }}  
           fi;
           source_branch_name="${GITHUB_REF##*/}"
+          git_hash=$(git rev-parse --short "$GITHUB_SHA")
 
-          # for dev branches, prefix "rc-"
+          # for dev branches, prefix "-alpha.<commit-hash>"
           if [ $source_branch_name != "main" ]; then 
-            nextversion="rc-"$nextversion 
+            nextversion=$nextversion"-alpha"$git_hash
           fi;
 
           echo "::set-output name=next_version::$nextversion"
