--- a/.github/workflows/build-source-image.yaml
+++ b/.github/workflows/build-source-image.yaml
@@ -274,6 +274,7 @@ jobs:
           last_commit=${git rev-list -n 1 ${{ steps.current_tag.outputs.tag }}}
           current_commit=${{ github.sha }}
           if [ $last_commit = $current_commit ]; then 
+            echo "no new commits from the last tag, no version bump is required"
             required=false
           else
             required=true
