--- a/.github/workflows/connector_checklist.yml
+++ b/.github/workflows/connector_checklist.yml
@@ -6,6 +6,8 @@ on:
       - "airbyte-integrations/connectors/source-**"
       - "airbyte-integrations/connectors/destination-**"
       - "airbyte-integrations/connectors/third-party/**"
+permissions:
+  contents: read
 jobs:
   checklist_job:
     name: Add Connector Merge Checklist Job
