--- a/.github/workflows/label-github-issues-by-path.yml
+++ b/.github/workflows/label-github-issues-by-path.yml
@@ -4,7 +4,8 @@
 name: "Label PR based on filepath"
 on:
   - pull_request_target
-
+permissions:
+  contents: read
 jobs:
   add-label-based-on-file-changes:
     name: "Label PRs based on files changes"
